correct spacing and alignment

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,20 +1,63 @@
 body {
+    text-align: center;
+    margin: 45px 0px;
     background-color: rgb(213, 248, 245);
 }
 
-#content {
-    width: 65vw;
-    padding: 30px;
-    background-color: rgb(248, 212, 212);
-    border-radius: 20px;
+#body {
+    display: grid;
+    place-content: center;
 }
 
-#home,
-#menu,
-#contact,
-.block {
+header {
+    padding: 20px 0px;
+    margin: 30px 0px;
+    background-color: rgb(248, 212, 212);
+}
+
+button,
+.block,
+.heading,
+.item {
     padding: 8px;
     background-color: pink;
     border: 4px solid lightpink;
     border-radius: 10px;
+}
+
+button {
+    font-size: 1em;
+    margin: 15px 3px;
+    padding: 10px 15px;
+}
+
+#content {
+    display: grid;
+    justify-items: center;
+    width: 65vw;
+    background-color: rgb(248, 212, 212);
+    border-radius: 20px;
+}
+
+.block {
+    width: 50vw;
+    padding: 20px 0px;
+    margin: 60px 30px 30px;
+}
+
+.heading {
+    display: grid;
+    justify-self: center;
+    width: 35vw;
+    padding: 15px 8px;
+    margin: 100px 30px 30px;
+}
+
+.item {
+    width: 43vw;
+    margin: 30px;
+}
+
+.end {
+    margin-bottom: 60px;
 }
